2do commit emprolijando

--- a/index.css
+++ b/index.css
@@ -1,129 +1,129 @@
-/** {
-    box-sizing: border-box;
-    border: solid greenyellow 1px; 
-
-}
-*/
-:root{
-    --color_primario: #ABA361;
-    --color-primario-dark: #732C2C;
-    --color-secundario: #BAD9B5;
-    --color-secundario-dark: #420C14;
-    --color-fondo: #EFF7CF;
-    --color-fondo-dark: black;
-    --color-fondo-secundario: grey;
+/*COLORES PARA TEMA POR DEFECTO (claro)*/
+body {
+    --color-fondo-A: #f1f7ed;
+    --color-fondo-B: #6d9d98;
+    --color-fondo-C: #02c39a;
+    --color-texto-A: #243E36;
+    --color-texto-B: #F0F3BD;
+    --color-texto-C: #05668d;
+    --color-acento: black;
 }
 
-body {background-color: #732C2C;
+/*COLORES PARA TEMA OSCURO*/
+body.oscuro {
+    --color-fondo-A: #243E36;
+    --color-fondo-B: #ad8e16;
+    --color-fondo-C: #11536d;
+    --color-texto-B: #e0eec6;
+    --color-texto-C: #F0F3BD;
+    --color-texto-A: #f1f7ed;
+    --color-acento: white;
     
-
 }
 
-/*UNIDAD DE MEDIDA COMO % DEL MÁXIMO DEL DISPOSITIVO ==== vmax*/
-
-html{
-    scroll-behavior: smooth;
-    scroll-padding-top: 230px;
-    margin-bottom: 5vh ;
+* {
+    font-family: 'Playfair Display', serif;
 }
-/*
+
 html {
-    background-color: var(--color-fondo);
-}*/
-
-/*#fijo{
-    position: fixed;
-    width: 100%;
-    padding: 25px;
+    scroll-behavior: smooth;
+    scroll-padding-top: var(--scroll-padding, 250px);
+    margin-bottom: 5.5vh ;   
 }
-*/
-/*#tope {
-    background-color: var(--color_primario);
-    position: absolute;
-    display:block
 
-
-/*OJO!! Preferible usar clases y no id!! reemplazar!!*/
-
-header{
-    background-color: #ABA361;
+header {
+    background-color: var(--color-fondo-C);   
 }
 
 header img {
     width: 10vw;
     min-width: 100px;
-    background-color: #ABA361;
-   
-}
-
-
-
-#barra_nav {
-    background-color: var(--color-primario-dark);
-    color: var(--color-fondo);
-    font-size: medium;
-    font-style: italic;  
-    letter-spacing: 0,2rem;
-    text-shadow:#420C14 2px 2px 5px;
-}
-
-#barra_nav a {
-    
-    text-decoration: none;
-    color:#BAD9B5;
-    padding: 1px 15px;
+    box-shadow: 4px 4px 10px;
     }
 
-#barra_nav i {
-    
-        color:white;
-        
-        
-        }
+nav {
+    background-color: var(--color-fondo-B);
+    letter-spacing: 0.5px;
+    box-shadow: 0px 3px 15px;
+}
 
-h1{
-    color: var(--color-fondo);
-    text-shadow: 2px 3px 6px var(--color-secundario);
+nav a {
+    text-decoration: none;
+    color:var(--color-texto-B);
+    padding: 0px 15px;
+    }
+
+nav a:hover{
+    font-weight: bold;
+}
+
+nav i {
+    color:var(--color-texto-B);      
+}
+
+h1 {
+    color: var(--color-texto-B);
+    text-shadow: 2px 2px 5px var(--color-acento);
+    letter-spacing: 2px;
     
 }
 
-h2{
+h2 {
     max-height: 4vh;
+    color: var(--color-texto-B);
+    font-style: italic;
 }
 
-h3{
+h3 {
+    color: var(--color-texto-C);
     font-size: large;
+    letter-spacing: 1px;
+    padding: 7.5px 2.5px;
+}
+
+h3 i {
+    padding: 7.5px 2.5px;
+    color: var(--color-fondo-B);
 }
 
 section p, ul {
-    color: red;
-    font-size: 85%;
+    color: var(--color-texto-A);
+    font-size: 90%;
+    font-weight: lighter;
 }
 
-#foto_pers {
-    text-shadow: 2px 3px 6px var(--color-primario-dark)
-}
+#lateral_izq {
+    background-image: linear-gradient(to right, var(--color-fondo-C), 60%, var(--color-fondo-A));
+} 
 
-#lateral_izq, #lateral_der, #header {
-    background-color: var(--color-secundario);
-    
-    
+#lateral_der {
+    background-image: linear-gradient(to right, var(--color-fondo-A), 60%, var(--color-fondo-C));
 }
-
 
 .cuerpo {
-    background-color:var(--color-fondo);
-    padding: 0px 15px;
-        
+    background-color:var(--color-fondo-A);
+    padding: 0px 0px; 
+}
+
+#cuerpo_centro {
+    box-shadow: inset 0 0 1.5px;
 }
 
 #pie {
-    background-color: var(--color-secundario);
+    background-color: var(--color-fondo-B);
+    color: var(--color-texto-B);
     font-size: small;
+    box-shadow: 0px -3px 15px black;
+}
+
+#pie a {
+    color: var(--color-texto-B);
+    font-size: small;
+    
 }
 
 .to-top {
-    background: white;
+    background: var(--color-fondo-A);
     position: fixed;
     bottom: 0px;
     right:20px;
@@ -134,100 +134,55 @@ section p, ul {
     align-items: center;
     justify-content: center;
     font-size:15px;
-    color:#1f1f1f;
+    color: var(--color-fondo-B);
     text-decoration: none;
     opacity:0;
     pointer-events: none;
     transition: all .4s;
-  }
+}
   
-  .to-top.active {
-    bottom: 45px;
+.to-top.active {
+    bottom: 50px;
     pointer-events: auto;
-    opacity:1;
-  }
-
-/*dentro de css puedo importar otro css con @import"/...xxx".css*/
-
-/* FLEXBOX
-
-Display: flex
-
-flex-direction - reverse
-flex-wrap - reverse
-flex-flow combina las dos cosas: elección col/row y direceccion
-
-Justify-content--> flex start=izq / flex end=der / space around / space between
-También Align-items / strecht=ocupa todo
-
-a los div les puedo dar order: 1, 2, etc dentro del flex-container
-
-*/
-/*
-.encabezado {
-    float: left;
-    width: 100%;
-    height: 20%;
+    opacity: 0.6;
 }
 
-.menu_izq {
-    float: left;
-    width: 15%;
-    background-color: rgb(62, 250, 77);
-    height: 70%;
+.to-top.active:hover{
+    opacity: 1;
 }
 
-.cuerpo {
-    float: left;
-    width: 85%;
-    background-color: chocolate;
-    height: 70%;
+#botonTema {
+    background: var(--color-fondo-A);
+    color: var(--color-fondo-B);
+    border-radius: 90%;
+    left: 20px;
+    bottom: 50px;
+    width:30px;
+    height:30px;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    opacity: 0.6;
+    transition: all .4s;  
 }
 
-.pie {
-    float: left;
-    width: 100%;
-    background-color: cadetblue;
-}
-/*
-ID se selecciona con #
-
-CLASS se selecciona con .
-se recomiendan los 2 antes que entrar por elementos
-
-
-h1, h4 {
-    background-color: chartreuse;
-    text-align: center;
+#botonTema:hover {
+    opacity: 1;
 }
 
- 
-nav {
-    background-color: blueviolet;
+.boton-oscuro #luna {
+    display: none
+}
+.boton-oscuro #sol {
+    display: block;
 }
 
-.center {
-    display:flex;
-    margin-left: auto;
-    margin-right: auto;
-    width: 5%;
-  }
-
-
-#parr {
-    font-family: 'Asap', sans-serif;
-    font-family: 'Josefin Sans', sans-serif;
-    font-family: 'Kanit', sans-serif;
-    font-family: 'Oswald', sans-serif;
-    font-family: 'Raleway', sans-serif;
-    font-family: 'Rowdies', cursive;
+#luna { 
+       display: block;
+    }
+    
+#sol {
+    display: none;
 }
-
-html {
-    font-family: 'Asap', sans-serif;
-    font-family: 'Josefin Sans', sans-serif;
-    font-family: 'Kanit', sans-serif;
-    font-family: 'Oswald', sans-serif;
-    font-family: 'Rowdies', cursive;
-  }
-*/  
